--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-slate
-title: Welcome to Mange Application Builder Platform
+title: Welcome to Mango Application Builder Platform
